--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
 		
 </head>
-<body>
+<body id="home">
 <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -21,16 +21,16 @@
     <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="#">Home</a>
+                <a class="nav-link" href="#home">Home</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Profile</a>
+                <a class="nav-link" href="#profile">Profile</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Experience</a>
+                <a class="nav-link" href="#experience">Experience</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Skills</a>
+                <a class="nav-link" href="#skills">Skills</a>
             </li>
         </ul>
     </div>
@@ -69,7 +69,8 @@
         </div>
     </div>
 </div>
-   <div class="container-border py-3">
+<section>
+   <div class="container-border py-3" id="profile">
      <div class="container">
          <div class="row justify-content-center education-title">
              <div class="category-title">
@@ -105,9 +106,13 @@
                  <p>Barnsley, South Yorkshire</p>
              </div>
          </div>
+        <div id="experience" >
+
+        </div>
         <hr class="hr-length">
      </div>
    </div><!--End of container-border-->
+</section>
 <section class="body-colour">
   <div class="container">
       <div class="row justify-content-center pt-3">
@@ -200,7 +205,7 @@
 </section>
      <div class="container-border">
       <div class="container">
-          <div class="row justify-content-center">
+          <div class="row justify-content-center" id="skills">
               <div class="category-title">
                   <h2>Skills</h2>
               </div>
@@ -479,7 +484,7 @@
 </section>
 </body>
 		<!-- jQuery library -->
-		<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 		<!-- Popper JS -->
 		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
 		<!-- Latest compiled JavaScript -->
