--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link" href="#home">Home</a>
+                <a class="nav-link active" href="#home">Home</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#profile">Profile</a>
@@ -106,14 +106,11 @@
                  <p>Barnsley, South Yorkshire</p>
              </div>
          </div>
-        <div id="experience" >
-
-        </div>
         <hr class="hr-length">
      </div>
    </div><!--End of container-border-->
 </section>
-<section class="body-colour">
+<section class="body-colour" id="experience">
   <div class="container">
       <div class="row justify-content-center pt-3">
           <div class="category-title">
