--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
         <link rel="stylesheet" href="font-awesome-4.7.0/css/font-awesome.min.css">
 		
 </head>
-<body id="home">
+<body>
+<div class="container-fluid">
 <nav class="navbar sticky-top navbar-expand-lg navbar-dark bg-dark">
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -21,7 +22,7 @@
     <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
         <ul class="navbar-nav">
             <li class="nav-item">
-                <a class="nav-link active" href="#home">Home</a>
+                <a class="nav-link" href="#home">Home</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#profile">Profile</a>
@@ -35,6 +36,7 @@
         </ul>
     </div>
 </nav>
+<section id="home">
 <div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-ride="carousel">
     <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -69,8 +71,9 @@
         </div>
     </div>
 </div>
-<section>
-   <div class="container-border py-3" id="profile">
+</section>
+    <section id="profile">
+   <div class="container-border py-3">
      <div class="container">
          <div class="row justify-content-center education-title">
              <div class="category-title">
@@ -200,9 +203,10 @@
   </div>
   </div><!--End of container-->
 </section>
+<section id="skills">
      <div class="container-border">
       <div class="container">
-          <div class="row justify-content-center" id="skills">
+          <div class="row justify-content-center">
               <div class="category-title">
                   <h2>Skills</h2>
               </div>
@@ -447,6 +451,7 @@
         <hr class="hr-length">
     </div><!--End of container-->
   </div><!--End of container-border-->
+</section>
 <section class="footer-background">
 <div class="container">
     <div class="row justify-content-center">
@@ -479,6 +484,7 @@
     <br>
     <br>
 </section>
+</div>
 </body>
 		<!-- jQuery library -->
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
