--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
         <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">
-        <ul class="navbar-nav">
-            <li class="nav-item">
+        <ul class="navbar-nav nav-list">
+            <li class="nav-item active">
                 <a class="nav-link" href="#home">Home</a>
             </li>
             <li class="nav-item">
@@ -32,6 +32,9 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="#skills">Skills</a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="#contact">Contact</a>
             </li>
         </ul>
     </div>
@@ -452,7 +455,7 @@
     </div><!--End of container-->
   </div><!--End of container-border-->
 </section>
-<section class="footer-background">
+<section class="footer-background" id="contact">
 <div class="container">
     <div class="row justify-content-center">
         <div class="footer-title">
