--- a/index.html
+++ b/index.html
@@ -3,17 +3,24 @@
 
 <head>
 		<title>Daniel Connolly - Online CV</title>
+		<meta name="author" content="Daniel Connolly">
+		<meta name="description" content="An online CV for a Web Developer that provides information on Daniel Connolly">
         <!-- Link for custom CSS -->
         <link rel="stylesheet" type="text/css" href="/css/style.css">
         <!-- meta value -->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css">
-    <!-- jQuery library -->
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <!-- Popper JS -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
-    <!-- Latest compiled JavaScript -->
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.min.js"></script>
+		
+		<!-- jQuery library -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+		<!-- Popper JS -->
+		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
+		<!-- Latest compiled JavaScript -->
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+        <!--Custom JavaScript -->
+        <script src="js/script.js"></script>
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
+
+
     <!--Font-Awesome-->
     <link rel="stylesheet" href="/font-awesome-4.7.0/css/font-awesome.min.css">
 		
@@ -48,6 +55,7 @@
         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
     </ol>
+	
     <div class="carousel-inner">
         <div class="carousel-item active">
             <img class="d-block w-100 carousel-image" src="images/fountain.jpg" alt="Fountain Town Centre Barnsley">
@@ -75,6 +83,12 @@
             </div>
         </div>
     </div>
+</div>
+ <div class="button-wrapper">
+	<a href="#" data-toggle="modal" data-target="#footerFormModal"
+		class="btn btn-dark button-colour">
+		<i class="d-none d-sm-inline fa fa-envelope-o" aria-hidden="true"></i>
+	Contact</a>
 </div>
 </section>
     <section id="profile">
@@ -491,14 +505,7 @@
 </section>
 </div>
 </body>
-		<!-- jQuery library -->
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-		<!-- Popper JS -->
-		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-		<!-- Latest compiled JavaScript -->
-		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-        <!--Custom JavaScript -->
-        <script src="js/script.js"></script>
+		
 </html>
 
 
